@@ -15,10 +15,12 @@ td.total { background-color: #E0E0E0; }
 .applistats .number { font-size: 80%; }
 .aliasstats .number { font-size: 80%; }
 
-#aliases, #addbutton { background-color: #E0E0E0; width: 340px; }
+#aliases, #addbutton { background-color: #E0E0E0; width: 380px; }
 #aliases div { display: inline-block; }
-#aliases div.aliascol { width: 160px; }
-#aliases div.targetcol { width: 70px; }
+#aliases div.aliascol { width: 120px; }
+#aliases div.aliascol input { width: 110px; }
+#aliases div.targetcol { width: 135px; }
+#aliases div.targetcol select { width: 125px; }
 #aliases div.countcol { width: 40px; }
 #aliases div.deletecol { width: 40px; }
 
@@ -29,3 +31,5 @@ td.total { background-color: #E0E0E0; }
   background-color: rgba(0,0,0,0.5); z-index: 2; cursor: pointer;
 }
 
+#updatespan { margin-left: 20px; }
+#update { background-color: red; }
