@@ -160,7 +160,8 @@ class cdnboxDNSserver extends EventEmitter {
 	} catch (e) {
 	  cdnboxStates.aliasstats[shortname]= { "count": 1 };
 	}
-        log = 'CNAME ' + cdnboxStates.alias.aliases[shortname].target + '. ';
+        log = ', "adata": "CNAME ' + cdnboxStates.alias.aliases[shortname].target + '. ' +
+              cdnboxStates.config.dnsserver.domain + '"';
       } else {
         log = dnsrequest(remoteaddress.address, dnspacket, shortname);
       }
