@@ -673,7 +673,7 @@ function aliasmanager(res) {
         <label for="ttl">TTL:</label><input type="text" size="5" id="ttl" value="` + cdnboxStates.alias.ttl + `">
         <input type="button" value="Reload" onclick="window.location = 'aliasmanager';">
         <input type="button" value="Close" onclick="aliasmanagerclose();">
-        <input type="button" id="update" value="Update" onclick="updatealiases();">
+        <span id="updatespan"><input type="button" id="update" value="Publish" onclick="updatealiases();"></span>
       </div>
       <br/>
       <div id="aliases">
